Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
                 <span class="logo">CC</span>
                 <span class="brand-name">Cristian Contreras</span>
             </div>
-            <ul class="nav-menu">
+            <button class="hamburger" id="hamburger" aria-label="Menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <ul class="nav-menu" id="nav-menu">
                 <li><a href="#presentacion">Inicio</a></li>
                 <li><a href="#experiencia">Experiencia</a></li>
                 <li><a href="#habilidades">Habilidades</a></li>
